Fix logo graphical bug on Firefox

--- a/style/style_valve.css
+++ b/style/style_valve.css
@@ -23,22 +23,18 @@ a:link, a:active, a:visited, a:hover {
     color: #eee;
 
     display: inline-block;
-    padding: 0 10px 0 2px;
+    padding: 0 2px 0 10px;
     margin: 10px auto;
     border: #eee solid 4px;
 
     line-height: 34px;
-
-    /* A hack to be able to select the last letter */
-    unicode-bidi: bidi-override;
-    direction: rtl;
 }
 
 /* TODO: In firefox the size of the #logo doesnt recompute to fit the text, fix it */
-#logo:first-letter {
+#logo .last-letter {
     font-size: 61%;
     vertical-align: top;
-    line-height: 24px; /* A hack to align the last letter with the rest */
+    line-height: 24px; /* A hack to align the top of the letter with the rest */
 }
 
 .headerText {
